# cpcv-train-test-data-split-module

./: LICENSE  README.md  pyproject.toml  setup.py
cpcv/: __init__.py  cpcv.py
tests/: test_cpcv.py
